--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <h2>Karya Ilustrasi Saya</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="nama_file_gambar_1.jpg" alt="Ilustrasi Digital 1">
-                <p><strong>Judul Ilustrasi 1:</strong> [Deskripsi singkat tentang ilustrasi ini dan prosesnya]</p>
+                <img src="mandala_file_gambar_1.jpg" alt="Ilustrasi 1">
+                <p><strong>Judul Ilustrasi 1:</strong> </p>
             </div>
             <div class="gallery-item">
-                <img src="nama_file_gambar_2.jpg" alt="Ilustrasi Digital 2">
-                <p><strong>Judul Ilustrasi 2:</strong> [Deskripsi singkat tentang ilustrasi ini dan prosesnya]</p>
+                <img src="mandala_file_gambar_2.jpg" alt="Ilustrasi 2">
+                <p><strong>Judul Ilustrasi 2:</strong> </p>
             </div>
             </div>
     </section>
