--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         <h2>Karya Ilustrasi Saya</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="mandala_file_gambar_1.jpg" alt="Ilustrasi 1">
-                <p><strong>Judul Ilustrasi 1:</strong> </p>
+                <img src=IMG_20250417_155727.jpg" alt="Ilustrasi 1">
+                <p><strong>Mandala Floral </strong> </p>
             </div>
             <div class="gallery-item">
-                <img src="mandala_file_gambar_2.jpg" alt="Ilustrasi 2">
-                <p><strong>Judul Ilustrasi 2:</strong> </p>
+                <img src="1733556704359.jpg" alt="Ilustrasi 2">
+                <p><strong>Mandala Floral </strong> </p>
             </div>
             </div>
     </section>
 
     <section id="contact" class="container">
         <h2>Hubungi Saya</h2>
-        <p>Email: <a href="mailto:ulliaarif12@gmail.com"> </a></p>
+        <p>Email: <a href="mailto:ulliaarif12@gmail.com">ulliaarif12@gmail.com</a></p>
         </section>
 
     <footer>
